--- a/software/esp32/platformio_sources/BLE_MIDI_board_server/platformio.ini
+++ b/software/esp32/platformio_sources/BLE_MIDI_board_server/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_deps = 
+	h2zero/NimBLE-Arduino@^1.3.1
+monitor_speed = 115200
+upload_port = /dev/cu.usbserial-0001
