--- a/software/esp32/platformio_sources/flr_ble_midi_board/platformio.ini
+++ b/software/esp32/platformio_sources/flr_ble_midi_board/platformio.ini
@@ -14,5 +14,5 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	bblanchon/ArduinoJson@^6.18.5
+	#bblanchon/ArduinoJson@^6.18.5
 	
